<resources>
    <string name="app_name">Сделать</string>
    <string name="my_tasks">Мои дела</string>
    <string name="completed">Выполнено — %1$d</string>
    <string name="no_priority">Без приоритета</string>
    <string name="high_priority">Высокий приоритет</string>
    <string name="low_priority">Низкий приоритет</string>
    <string name="mark_completed">Пометить выполненным</string>
    <string name="mark_not_completed">Пометить невыполненным</string>
    <string name="show_completed">Показать завершённые</string>
    <string name="hide_completed">Скрыть завершённые</string>
    <string name="more_info">Больше информации</string>
    <string name="add_new_task">Добавить новую задачу</string>
    <string name="close">Закрыть</string>
    <string name="save">Сохранить</string>
    <string name="what_to_do">Что надо сделать…</string>
    <string name="priority">Важность</string>
    <string name="deadline">Сделать до</string>
    <string name="delete">Удалить</string>
    <string name="no">Нет</string>
    <string name="low">Низкий</string>
    <string name="high">Высокий</string>
    <string name="empty_task_message">Введите текст задачи</string>
    <string name="no_connection">Нет соединения</string>
    <string name="sync_successful">Синхронизация прошла успешно</string>
    <string name="sync_failed">Синхронизация не удалась :(</string>
    <string name="remote_data_update_failed">Не удалось обновить данные на сервере</string>
    <string name="ok">ОК</string>
    <string name="cancel">Отмена</string>
    <string name="go_back">Назад</string>
    <string name="default_theme">По умолчанию</string>
    <string name="light_theme">Светлая</string>
    <string name="dark_theme">Тёмная</string>
    <string name="current_theme">Текущая тема</string>
    <string name="settings">Настройки</string>
    <string name="select_time">Выбор времени</string>
    <string name="notification_channel_name">Уведомления</string>
    <string name="notification_channel_description">Напоминания о задачах</string>
</resources>