<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?back_primary"
    tools:context=".TodoList">

    <ImageView
        android:id="@+id/completed_visibility"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:contentDescription="@string/hide_completed"
        android:src="@drawable/visibility"
        app:layout_constraintBottom_toBottomOf="@+id/completed"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/completed" />

    <TextView
        android:id="@+id/title_text"
        style="@style/LargeTitle"
        android:layout_width="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="50dp"
        android:text="@string/my_tasks"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/completed"
        style="@style/Body"
        android:layout_marginTop="6dp"
        android:text="@string/completed"
        android:textColor="?label_tertiary"
        app:layout_constraintStart_toStartOf="@+id/title_text"
        app:layout_constraintTop_toBottomOf="@+id/title_text" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/todo_items"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="12dp"
        android:background="@drawable/card_background"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/completed_visibility" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/new_todo_floating_action_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="24dp"
        android:clickable="true"
        android:contentDescription="@string/add_new_task"
        android:focusable="true"
        android:src="@drawable/add"
        app:backgroundTint="?color_blue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:shapeAppearanceOverlay="@style/FabShapeStyle" />

</androidx.constraintlayout.widget.ConstraintLayout>