<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?back_secondary"
    android:paddingStart="16dp"
    android:paddingTop="12dp"
    android:paddingEnd="16dp"
    android:paddingBottom="12dp">


    <ImageView
        android:id="@+id/checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/mark_completed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/checkbox_unchecked_normal" />

    <ImageView
        android:id="@+id/priority"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="3dp"
        android:contentDescription="@string/no_priority"
        app:layout_constraintEnd_toStartOf="@+id/text_preview"
        app:layout_constraintStart_toEndOf="@+id/checkbox"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_preview"
        style="@style/Body"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="12dp"
        android:ellipsize="end"
        android:maxLines="3"
        app:layout_constraintEnd_toStartOf="@+id/info_button"
        app:layout_constraintStart_toEndOf="@+id/priority"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/deadline"
        style="@style/Subhead"
        android:layout_width="wrap_content"
        android:layout_marginTop="4dp"
        android:textColor="?label_tertiary"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="@+id/text_preview"
        app:layout_constraintTop_toBottomOf="@+id/text_preview" />

    <ImageView
        android:id="@+id/info_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/more_info"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/info_outline" />
</androidx.constraintlayout.widget.ConstraintLayout>